crates/bitnet-kernels/tests/snapshots/snapshot_wave22__fused_attention_config_gqa_flash.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave22.rs
assertion_line: 215
expression: cfg
---
FusedAttentionConfig {
    head_dim: 128,
    num_heads: 32,
    num_kv_heads: 8,
    max_seq_len: 4096,
    causal: true,
    flash_attention: true,
    use_alibi: false,
}
