crates/bitnet-kernels/tests/snapshots/snapshot_wave22__grid_group_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave22.rs
assertion_line: 343
expression: g
---
GridGroup {
    block_size: 256,
    num_blocks: 128,
}
