crates/bitnet-kernels/tests/snapshots/snapshot_wave22__kernel_op_all_variants.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave22.rs
assertion_line: 716
expression: ops
---
[
    MatMul,
    MatVec,
    Softmax,
    RmsNorm,
    LayerNorm,
    RoPE,
    Attention,
    SiLU,
    GELU,
    ReLU,
    ElementwiseAdd,
    ElementwiseMul,
    Scale,
    Embedding,
    Dequantize,
    KvCacheAppend,
]
