crates/bitnet-kernels/tests/snapshots/snapshot_wave22__kernel_variant_all_variants.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave22.rs
assertion_line: 728
expression: variants
---
[
    OpenClScalar,
    OpenClTiled,
    OpenClVectorized,
    CpuSimd,
    CpuScalar,
]
