crates/bitnet-kernels/tests/snapshots/snapshot_wave22__linear_config_basic.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave22.rs
assertion_line: 555
expression: cfg
---
LinearConfig {
    in_features: 768,
    out_features: 3072,
    batch_size: 1,
    has_bias: false,
    tile_m: 32,
    tile_n: 32,
    tile_k: 32,
    threads_per_block: 256,
    shared_mem_bytes: 8192,
}
