crates/bitnet-kernels/tests/snapshots/snapshot_wave22__metric_counter_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave22.rs
assertion_line: 675
expression: m
---
Metric {
    name: "kernel_dispatches",
    kind: Counter,
    value: 42.0,
    labels: {},
    timestamp: SystemTime {
        tv_sec: [FILTERED],
        tv_nsec: [FILTERED],
    },
}
